[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/blippolightsf.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ARARCE__Med.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/BWTheme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/UI/main_menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 200
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" type="Node2D" parent="."]

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -234.0
margin_top = 78.0
margin_right = 239.0
margin_bottom = 324.0
custom_fonts/font = SubResource( 1 )
text = "spong"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 5.5
margin_right = 200.0
margin_bottom = 290.5
custom_constants/separation = 30

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 65.0
rect_min_size = Vector2( 400, 65 )
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Play"

[node name="RulesButton" type="Button" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 400.0
margin_bottom = 160.0
rect_min_size = Vector2( 400, 65 )
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Rules"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 190.0
margin_right = 400.0
margin_bottom = 255.0
rect_min_size = Vector2( 400, 65 )
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Settings"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RulesButton" to="." method="_on_RulesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
